stDemoOne/force-app/main/default/objects/Case/fields/Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Date__c</fullName>
    <description>Grant Application Date</description>
    <inlineHelpText>Grant Application Date</inlineHelpText>
    <label>Application Date</label>
    <type>Date</type>
</CustomField>