stDemoOne/force-app/main/default/objects/Case/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>140</length>
    <type>Text</type>
</CustomField>