stDemoOne/force-app/main/default/objects/Case/fields/gps_Community_Contact_Match__c.field-meta.xml
<CustomField>
    <fullName>gps_Community_Contact_Match__c</fullName>
    <formula>ContactId = $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Contact Match</label>
    <type>Checkbox</type>
</CustomField>