stDemoOne/force-app/main/default/objects/Case/fields/Grant_Documentation_Status__c.field-meta.xml
<CustomField>
    <fullName>Grant_Documentation_Status__c</fullName>
    <description>Status of Grants documentation</description>
    <inlineHelpText>Status of Grants documentation</inlineHelpText>
    <label>Grant Documentation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>