stDemoOne/force-app/main/default/objects/Case/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <inlineHelpText>The Latitude and Longitude in decimal format.</inlineHelpText>
    <label>Location</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>