stDemoOne/force-app/main/default/objects/Case/fields/MapIcon__c.field-meta.xml
<CustomField>
    <fullName>MapIcon__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; 
CASE( Type, 
&quot;Animal Control&quot;, &quot;resource/CaseType/OneCityAnimalInactive.png&quot;, 
&quot;Events&quot;, &quot;resource/CaseType/OneCityEventsInactive.png&quot;, 
&quot;General Inquiry&quot;, &quot;resource/CaseType/OneCityGeneralInactive.png&quot;, 
&quot;Licensing and Permitting&quot;, &quot;resource/CaseType/OneCityPermitInactive.png&quot;, 
&quot;Noise&quot;, &quot;resource/CaseType/OneCityNoiseInactive.png&quot;, 
&quot;Complaint&quot;, &quot;resource/CaseType/OneCityNoiseInactive.png&quot;,
&quot;Break/Fix&quot;, &quot;resource/CaseType/OneCityPublicWorksInactive.png&quot;,
&quot;Public Works&quot;, &quot;resource/CaseType/OneCityPublicWorksInactive.png&quot;, 
&quot;Street and Traffic&quot;, &quot;resource/CaseType/OneCityStreetInactive.png&quot;, 
&quot;resource/CaseType/OneCityNoTypeInactive.png&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MapIcon</label>
    <type>Text</type>
</CustomField>