stDemoOne/force-app/main/default/objects/Case/fields/MarkerHTML__c.field-meta.xml
<CustomField>
    <fullName>MarkerHTML__c</fullName>
    <formula>&apos;&lt;h3&gt;&lt;a href=\&quot;@ID@\&quot;&gt;[&apos; +  CaseNumber  + &apos;] &apos; + Subject + &apos;&lt;/a&gt;&lt;/h3&gt;&apos; +
                            &apos;&lt;table&gt;&lt;tr&gt;&lt;td valign=&quot;top&quot; style=&quot;padding-right: 10px&quot;&gt;&apos; +
                            &apos;&lt;/td&gt;&lt;td&gt;&apos; +
                            &apos;&lt;br/&gt;&lt;b&gt;Type:&lt;/b&gt; &apos; + TEXT(Type) + 
                            &apos;&lt;br/&gt;&lt;b&gt;Status:&lt;/b&gt; &apos; + TEXT(Status) + 
                            &apos;&lt;br/&gt;&lt;b&gt;Priority:&lt;/b&gt; &apos; + TEXT(Priority) +
                            &apos;&lt;/td&gt;&lt;/tr&gt;&lt;/table&gt;&apos; +
&apos;&lt;br/&gt;&lt;a href=&quot;https://www.google.com/maps/dir/?api=1&amp;destination=&apos; +  TEXT(Location__Latitude__s)  + &apos;,&apos; +  TEXT(Location__Longitude__s)  + &apos;&quot; target=&quot;_blank&quot; style=&quot;text-decoration:none;color:#47b055;&quot;&gt;Driving Directions&lt;/a&gt;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarkerHTML</label>
    <type>Text</type>
</CustomField>