stDemoOne/force-app/main/default/objects/Case/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>75</length>
    <type>Text</type>
</CustomField>