stDemoOne/force-app/main/default/objects/Case/recordTypes/Court_Case.recordType-meta.xml
<RecordType>
    <fullName>Court_Case</fullName>
    <active>true</active>
    <businessProcess>Court Case Process</businessProcess>
    <label>Court Case</label>
</RecordType>