stDemoOne/force-app/main/default/objects/Case/recordTypes/gps_Investigative_Case.recordType-meta.xml
<RecordType>
    <fullName>gps_Investigative_Case</fullName>
    <active>true</active>
    <businessProcess>Standard Support Process</businessProcess>
    <description>For Investigative Case Management</description>
    <label>Investigative Case</label>
</RecordType>