stDemoOne/force-app/main/default/objects/Case/listViews/Benefits_Management_Cases.listView-meta.xml
<ListView>
    <fullName>Benefits_Management_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.TYPE</field>
        <operation>equals</operation>
        <value>Services &amp; Benefits</value>
    </filters>
    <label>Benefits Management Cases</label>
</ListView>