stDemoOne/force-app/main/default/objects/Case/listViews/gps_Cases_Community_CMS_Collection.listView-meta.xml
<ListView>
    <fullName>gps_Cases_Community_CMS_Collection</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>gps_Community_Contact_Match__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cases - Community CMS Collection</label>
</ListView>