stDemoOne/force-app/main/default/objects/Case/listViews/Related_Theft_Cases.listView-meta.xml
<ListView>
    <fullName>Related_Theft_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>contains</operation>
        <value>Stolen Car</value>
    </filters>
    <label>Related Theft Cases</label>
</ListView>